--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.4"
   },
   "repository": {
     "type": "git",
